--- a/HIVTreatment/package.json
+++ b/HIVTreatment/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "antd": "^5.25.2",
+    "framer-motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
