--- a/HIVTreatment/package.json
+++ b/HIVTreatment/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.7",
     "antd": "^5.25.2",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.514.0",
     "motion": "^12.15.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
