--- a/HIVTreatment/package.json
+++ b/HIVTreatment/package.json
@@ -17,6 +17,7 @@
     "motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
