--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.25.2",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "node index.js"
