--- a/HIVTreatment/package.json
+++ b/HIVTreatment/package.json
@@ -14,6 +14,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tailwindcss/vite": "^4.1.7",
     "antd": "^5.26.6",
+    "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.514.0",
